# rag-research-assistant

./: MIGRATION_COMPLETE.md  README.md  cache.py  database.py  docker-compose.yml  main.py  package.json  pyproject.toml  rag_service.py  render.yaml  requirements.txt  start-dev.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  cache.py  database.py  main.py  pyproject.toml  rag_service.py  redis_setup.py  requirements.txt  setup_data.py  start-dev.py  test_app.py  test_upload.py
chroma_db/51faf975-ef70-446c-a587-99609fed9e4e/: index_metadata.pickle
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  start-dev.js  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: AIAssistantPanel.tsx  AIChat.tsx  AIKnowledgePanel.tsx  ChatGPTInterface.tsx  ConnectionStatus.tsx  FormattedText.tsx  MarkdownRenderer.tsx  ResearchChat.tsx  ThemeToggle.tsx  ThemedChatInterface.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/lib/: api.ts  smartSuggestions.ts  textFormatter.ts
frontend/src/types/: index.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: FileUpload.tsx  UsageGuide.tsx
src/lib/: constants.ts
