[project]
name = "rag-research-assistant"
version = "0.1.0"
description = "A professional, production-ready Retrieval-Augmented Generation (RAG) system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.116.1",
    "uvicorn[standard]~=0.35.0",
    "langchain-groq~=0.3.6",
    "python-dotenv~=1.1.1",
    "pydantic~=2.11.7",
    "pyyaml~=6.0.2",
    "langchain_community~=0.3.24",
    "langchain_huggingface~=0.2.0",
    "chromadb~=1.0.12",
    "chroma-hnswlib~=0.7.6",
    "pypdf~=6.6.2",
    "streamlit~=1.53.1",
    "docx2txt~=0.8",
    "openpyxl~=3.1.5",
    "python-pptx~=1.0.2",
    "requests~=2.31.0",
    "zstandard==0.25.0",
    "msoffcrypto-tool~=5.0.0",
    "xlrd~=2.0.1",
    "redis~=5.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
